    also in 0.7.7.

  - [bug] Fixed bug in expression annotation
    mechanics which could lead to incorrect
    rendering of SELECT statements with aliases
    and joins, particularly when using 
    column_property().  [ticket:2453]
    also in 0.7.7.

  - [bug] Fixed bug which would prevent
    OrderingList from being pickleable
    [ticket:2454].  Courtesy Jeff Dairiki
    also in 0.7.7.

- sql
  - [bug] The names of the columns on the
    .c. attribute of a select().apply_labels()
    is now based on <tablename>_<colkey> instead
    of <tablename>_<colname>, for those columns
    that have a distinctly named .key.
    [ticket:2397]

  - [feature] The Inspector object can now be 
    acquired using the new inspect() service,
    part of [ticket:2208]

  - [feature] The column_reflect event now
    accepts the Inspector object as the first
    argument, preceding "table".   Code which
    uses the 0.7 version of this very new 
    event will need modification to add the 
    "inspector" object as the first argument.  
    [ticket:2418]

  - [bug] Removed warning when Index is created
    with no columns; while this might not be what 
    the user intended, it is a valid use case 
    as an Index could be a placeholder for just an 
    index of a certain name.
    also in 0.7.7.

  - [feature] Added new connection event
    dbapi_error(). Is called for all DBAPI-level
    errors passing the original DBAPI exception
    before SQLAlchemy modifies the state 
    of the cursor.
    also in 0.7.7.

  - [bug] If conn.begin() fails when calling
    "with engine.begin()", the newly acquired
    Connection is closed explicitly before 
    propagating the exception onward normally.
    also in 0.7.7.

- mssql
  - [bug] removed legacy behavior whereby 
    a column comparison to a scalar SELECT via 
    == would coerce to an IN with the SQL server
    dialect.  This is implicit
    behavior which fails in other scenarios
    so is removed.  Code which relies on this